--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">WizzApp</string>
     <string name="AppName">WizzApp</string>
-    <string name="spela">SPELA</string>
-    <string name="inställningar">INSTÄLLNINGAR</string>
-    <string name="om">OM</string>
+    <string name="spela">Spela</string>
+    <string name="inställningar">Inställningar</string>
+    <string name="om">Om</string>
     <string name="developedBy">Developed by ITHS</string>
 </resources>
