--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="inställningar">Inställningar</string>
     <string name="om">Om</string>
     <string name="developedBy">Developed by ITHS</string>
+    <string name="app_name2">Quizable</string>
 </resources>
