--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -4,7 +4,5 @@
     <string name="om">Om</string>
     <string name="inställningar">Inställningar</string>
     <string name="spela">Spela</string>
-    <string name="app_name">WizzApp</string>
-    <string name="AppName">WizzApp</string>
-    <string name="app_name2">Quizable</string>
+    <string name="AppName">Quizable</string>
 </resources>
