--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,5 +5,7 @@
     <string name="about">About</string>
     <string name="settings">Settings</string>
     <string name="app_name">Quizable</string>
+    <string name="go_back">Back</string>
+    <string name="profile">Profile</string>
 
 </resources>
