--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,5 +7,8 @@
     <string name="app_name">Quizable</string>
     <string name="go_back">Back</string>
     <string name="profile">Profile</string>
+    <string name="multiplayer">Multiplayer</string>
+    <string name="create_question">Add question</string>
+    <string name="handle_questions">Handle questions</string>
 
 </resources>
