--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="developed_by">Developed by ITHS</string>
     <string name="go_back">Back</string>
     <string name="profile">Profile</string>
+    <string name="multiplayer">Multiplayer</string>
+    <string name="create_question">Add question</string>
+    <string name="handle_questions">Handle questions</string>
 </resources>
