--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -10,4 +10,5 @@
     <string name="multiplayer">Multiplayer</string>
     <string name="create_question">Skapa frågor</string>
     <string name="handle_questions">Hantera frågor</string>
+    <string name="highscore">Highscore</string>
 </resources>
