--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,6 +10,8 @@
     <string name="multiplayer">Multiplayer</string>
     <string name="create_question">Add question</string>
     <string name="handle_questions">Handle questions</string>
-    <string name="highscore">Highscore</string>
+    <string name="result">Result</string>
+    <string name="higscore">Highscore</string>
+    <string name="handleQuestions">Handle questions</string>
 
 </resources>
