Game Menu String + Singelplayer alternativ i game_menu

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,5 +13,7 @@
     <string name="result">Result</string>
     <string name="higscore">Highscore</string>
     <string name="handleQuestions">Handle questions</string>
+    <string name="singelplayer">Singelplayer</string>
+    <string name="game_menu">Game Menu</string>
 
 </resources>
