--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="result">Result</string>
     <string name="higscore">Highscore</string>
     <string name="handleQuestions">Handle questions</string>
+    <string name="singelplayer">Singelplayer</string>
+    <string name="game_menu">Game Menu</string>
 </resources>
