--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -15,4 +15,5 @@
     <string name="handleQuestions">Hantera frågor</string>
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Spelmeny</string>
+    <string name="textview_about">Quizable is...</string>
 </resources>
