--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,5 +16,6 @@
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Game Menu</string>
     <string name="textview_about">Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.\n\nSpelet går ut på att...</string>
+    <string name="add">Add</string>
 
 </resources>
