--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -16,4 +16,5 @@
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Spelmeny</string>
     <string name="textview_about">Quizable is...</string>
+    <string name="add">Lägg till</string>
 </resources>
