--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -8,13 +8,19 @@
     <string name="go_back">Bakåt</string>
     <string name="profile">Profil</string>
     <string name="multiplayer">Multiplayer</string>
-    <string name="create_question">Skapa frågor</string>
-    <string name="handle_questions">Hantera frågor</string>
+    <string name="handle_questions">tabort</string>
     <string name="result">Resultat</string>
     <string name="higscore">Highscore</string>
-    <string name="handleQuestions">Hantera frågor</string>
+    <string name="manage_questions">Hantera frågor</string>
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Spelmeny</string>
     <string name="textview_about">Quizable is...</string>
     <string name="add">Lägg till</string>
+    <string name="music">Musik</string>
+    <string name="own_questions">Egna frågor</string>
+    <string name="geography">Geografi</string>
+    <string name="sport">Sport</string>
+    <string name="science">Vetenskap</string>
+    <string name="games">Spel</string>
+    <string name="culture">Kultur</string>
 </resources>
