--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,19 @@
     <string name="go_back">Back</string>
     <string name="profile">Profile</string>
     <string name="multiplayer">Multiplayer</string>
-    <string name="create_question">Add question</string>
-    <string name="handle_questions">Handle questions</string>
+    <string name="handle_questions">tabort</string>
     <string name="result">Result</string>
     <string name="higscore">Highscore</string>
-    <string name="handleQuestions">Handle questions</string>
+    <string name="manage_questions">Manage questions</string>
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Game Menu</string>
     <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.\n\nSpelet går ut på att... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... "</string>
     <string name="add">Add</string>
+    <string name="music">Music</string>
+    <string name="sport">Sport</string>
+    <string name="own_questions">Own Questions</string>
+    <string name="geography">Geography</string>
+    <string name="science">Science</string>
+    <string name="games">Games</string>
+    <string name="culture">Culture</string>
 </resources>
