Added HighScoresAdapter class

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,5 +24,20 @@
     <string name="science">Science</string>
     <string name="games">Games</string>
     <string name="culture">Culture</string>
+    <string name="all_categories">All categories</string>
+    <string name="choose_category">Click here for category</string>
+    <string name="empty_text">""</string>
+
+
+    <string-array name="categories_array">
+        <item>@string/all_categories</item>
+        <item>@string/culture</item>
+        <item>@string/games</item>
+        <item>@string/geography</item>
+        <item>@string/music</item>
+        <item>@string/own_questions</item>
+        <item>@string/sport</item>
+        <item>@string/science</item>
+    </string-array>
 
 </resources>
