--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -24,4 +24,17 @@
     <string name="science">Vetenskap</string>
     <string name="games">Spel</string>
     <string name="culture">Kultur</string>
+
+    <string-array name="categories_array">
+        <item>@string/all_categories</item>
+        <item>@string/culture</item>
+        <item>@string/games</item>
+        <item>@string/geography</item>
+        <item>@string/music</item>
+        <item>@string/own_questions</item>
+        <item>@string/sport</item>
+        <item>@string/science</item>
+    </string-array>
+    <string name="all_categories">Alla kategorier</string>
+    <string name="choose_category">Choose category</string>
 </resources>
