Toast påbörjad (own category)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,5 +24,6 @@
     <string name="science">Science</string>
     <string name="games">Games</string>
     <string name="culture">Culture</string>
+    <string name="no_questions">You have not create any own questions yet!</string>
 
 </resources>
