--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -24,4 +24,5 @@
     <string name="science">Vetenskap</string>
     <string name="games">Spel</string>
     <string name="culture">Kultur</string>
+    <string name="no_questions">Du har inte skapar några egna frågor än!</string>
 </resources>
