--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -38,5 +38,6 @@
         <item>@string/sport</item>
         <item>@string/science</item>
     </string-array>
+    <string name="points">Points:</string>
 
 </resources>
