--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="manage_questions">Manage questions</string>
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Game Menu</string>
-    <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.\n\nSpelet går ut på att... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... Bla bla bla... "</string>
+    <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.\n\nSpelet går ut på att svara på om ett påstående är sant eller falskt, fast du måste tänka tvärt-om. Du kan även lägga till egna påståenden själv, om du vill.\n\nÄr Sverige ett land? Ja, därför är \"rätt\" svar falskt eftersom du måste tänka tvärt-om. "</string>
     <string name="add">Add</string>
     <string name="music">Music</string>
     <string name="sport">Sport</string>
@@ -25,6 +25,7 @@
     <string name="culture">Culture</string>
     <string name="all_categories">All categories</string>
     <string name="no_questions">No questions</string>
+    <string name="points">Points:</string>
 
     <string-array name="categories_array">
         <item>@string/all_categories</item>
@@ -36,5 +37,5 @@
         <item>@string/sport</item>
         <item>@string/science</item>
     </string-array>
-    <string name="points">Points:</string>
+
 </resources>
