--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,13 +9,15 @@
     <string name="profile">Profile</string>
     <string name="multiplayer">Multiplayer</string>
     <string name="highscores">Highscores</string>
-    <string name="handle_questions">tabort</string>
+    <string name="handle_questions">ta bort</string>
     <string name="result">Result</string>
     <string name="highscore">Highscore</string>
     <string name="manage_questions">Manage questions</string>
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Game Menu</string>
+    <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.  Spelet går ut på att svara på om ett påstående är sant eller falskt, fast du måste tänka tvärt-om. Du kan även lägga till egna påståenden själv, om du vill.  Är Sverige ett land? Ja, därför är \"rätt\" svar falskt eftersom du måste tänka tvärt-om. "</string>
     <string name="add">Add</string>
+
     <string name="music">Music</string>
     <string name="sport">Sport</string>
     <string name="own_questions">Own Questions</string>
@@ -23,6 +25,7 @@
     <string name="science">Science</string>
     <string name="games">Games</string>
     <string name="culture">Culture</string>
+
     <string name="all_categories">All categories</string>
     <string name="choose_category">Click here for category</string>
 
