--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Quizable</string>
     <string name="developed_by">Developed by ITHS</string>
+    <string name="profile">Profile</string>
+    <string name="result">Result</string>
+    <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.  Spelet går ut på att svara på om ett påstående är sant eller falskt, fast du måste tänka tvärt-om. Du kan även lägga till egna påståenden själv, om du vill.  Är Sverige ett land? Ja, därför är \"rätt\" svar falskt eftersom du måste tänka tvärt-om. "</string>
+    <string name="points">Points:</string>
+
+    <!--Buttons-->
+    <string name="handle_questions">Handle questions</string>
+    <string name="add">Add</string>
+    <string name="go_back">Back</string>
+    <string name="manage_questions">Manage questions</string>
+    <string name="isTrue">True</string>
+    <string name="isFalse">False</string>
+
+    <!--Menu-->
+    <string name="multiplayer">Multiplayer</string>
+    <string name="highscore">Highscore</string>
+    <string name="singelplayer">Singelplayer</string>
+    <string name="game_menu">Game Menu</string>
     <string name="play">Play</string>
     <string name="about">About</string>
     <string name="settings">Settings</string>
-    <string name="app_name">Quizable</string>
-    <string name="go_back">Back</string>
-    <string name="profile">Profile</string>
-    <string name="multiplayer">Multiplayer</string>
-    <string name="highscores">Highscores</string>
-    <string name="handle_questions">ta bort</string>
-    <string name="result">Result</string>
-    <string name="highscore">Highscore</string>
-    <string name="manage_questions">Manage questions</string>
-    <string name="singelplayer">Singelplayer</string>
-    <string name="game_menu">Game Menu</string>
-    <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.  Spelet går ut på att svara på om ett påstående är sant eller falskt, fast du måste tänka tvärt-om. Du kan även lägga till egna påståenden själv, om du vill.  Är Sverige ett land? Ja, därför är \"rätt\" svar falskt eftersom du måste tänka tvärt-om. "</string>
-    <string name="add">Add</string>
 
+    <!--Categories-->
     <string name="music">Music</string>
     <string name="sport">Sport</string>
     <string name="own_questions">Own Questions</string>
@@ -28,9 +35,9 @@
 
     <string name="all_categories">All categories</string>
     <string name="choose_category">Click here for category</string>
-    <string name="points">Points:</string>
+    <string name="isTruee">True</string>
 
-
+    <!--Arrays-->
     <string-array name="top5">
         <item>1.Alvar</item>
         <item>2.Ibrahim</item>
