--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -17,7 +17,7 @@
 
     <!--Menu-->
     <string name="multiplayer">Multiplayer</string>
-    <string name="highscores">Highscore</string>
+    <string name="highscore">Highscore</string>
     <string name="singelplayer">Singelplayer</string>
     <string name="game_menu">Spelmeny</string>
     <string name="play">Spela</string>
