--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,7 +34,7 @@
     <string name="culture">Culture</string>
 
     <string name="all_categories">All categories</string>
-    <string name="choose_category">Click here for category</string>
+    <string name="choose_category">Choose category</string>
     <string name="isTruee">True</string>
 
     <!--Arrays-->
@@ -46,5 +46,8 @@
         <item>5.Hanna</item>
         <item>6.Knape</item>
     </string-array>
+    <string name="create_statement">Create Statement</string>
+    <string name="add_statement">Add text to your statement</string>
+    <string name="statement_true_false">Choose if your statement is \"true\" or \"false\"</string>
 
 </resources>
