--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="all_categories">All categories</string>
     <string name="choose_category">Choose category</string>
     <string name="isTruee">True</string>
+    <string name="food">Food</string>
+    <string name="mat">mat</string>
 
     <!--Arrays-->
     <string-array name="top5">
@@ -45,10 +47,14 @@
         <item>5.Hanna</item>
         <item>6.Knape</item>
     </string-array>
+
+
     <string name="create_statement">Create Statement</string>
     <string name="add_statement">Add text to your statement</string>
     <string name="statement_true_false">Choose if your statement is \"true\" or \"false\"</string>
-    <string name="food">Food</string>
-    <string name="mat">mat</string>
+    <string name="edit_category">Edit category</string>
+    <string name="edit_statement">Edit statement</string>
+    <string name="Edit">Edit</string>
+
 
 </resources>
