--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,5 +49,6 @@
     <string name="create_statement">Create Statement</string>
     <string name="add_statement">Add text to your statement</string>
     <string name="statement_true_false">Choose if your statement is \"true\" or \"false\"</string>
+    <string name="save">Save</string>
 
 </resources>
