Clicking on backButton on ResultActivity takes you now back to Main Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <string name="save">Save</string>
     <string name="play_again">Play again</string>
     <string name="back_to_main_menu">Main menu</string>
+    <string name="edit_category">Edit category</string>
+    <string name="edit_statement">Edit statement</string>
+    <string name="Edit">Edit</string>
 
 </resources>
