--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,6 @@
     <string name="profile">Profile</string>
     <string name="result">Result</string>
     <string name="textview_about">"Quizabble är ett frågesportsspel som är utvecklat av studenter från ITHS-Högksolan.\n\nSpelet går ut på att svara på om ett påstående är sant eller falskt, fast du måste tänka tvärt-om.\n\nDu kan även lägga till egna påståenden själv, om du vill.  Är Sverige ett land? Ja, därför är \"rätt\" svar falskt eftersom du måste tänka tvärt-om. "</string>
-    <string name="points">"Points: "</string>
 
     <!--Buttons-->
     <string name="handle_statements">Handle statements</string>
@@ -53,4 +52,10 @@
     </string-array>
 
     <string name="statement_true_false">Choose if your statement is \"true\" or \"false\"</string>
+    <string name="food">Food</string>
+    <string name="edit_category">Edit category</string>
+    <string name="edit_statement">Edit statement</string>
+    <string name="Edit">Edit</string>
+    <string name="points">points</string>
+    <string name="mat">Food</string>
 </resources>
