Added 2 textviews to highscore item list that shows amount of rounds

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="edit_category">Edit category</string>
     <string name="edit_statement">Edit statement</string>
     <string name="Edit">Edit</string>
+    <string name="amount_of_rounds">Amount of rounds:</string>
 
 </resources>
