--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,10 @@
     <!--Categories-->
     <string name="music">Music</string>
     <string name="sport">Sport</string>
-    <string name="own_statements">Own Statements</string>
+    <string name="own_statements">Own statements</string>
     <string name="geography">Geography</string>
     <string name="science">Science</string>
-    <string name="games">Games</string>
+    <string name="games">Game</string>
     <string name="culture">Culture</string>
 
     <string name="all_categories">All categories</string>
@@ -60,5 +60,6 @@
     <string name="amount_of_statements">Amount of statements</string>
     <string name="chosen_category">Category:</string>
     <string name="go">GO</string>
+    <string name="own">Own</string>
 
 </resources>
